feat: remove unnecessary recognizers

--- a/notebooks/4_Evaluate_Presidio_Analyzer.ipynb
+++ b/notebooks/4_Evaluate_Presidio_Analyzer.ipynb
@@ -54,10 +54,14 @@
     "from typing import Dict, List\n",
     "import json\n",
     "\n",
+    "from presidio_analyzer import AnalyzerEngine, RecognizerRegistry\n",
+    "from presidio_analyzer.nlp_engine import SpacyNlpEngine, NerModelConfiguration\n",
+    "\n",
     "from presidio_evaluator import InputSample\n",
     "from presidio_evaluator.evaluation import Evaluator, ModelError, Plotter\n",
     "from presidio_evaluator.experiment_tracking import get_experiment_tracker\n",
     "from presidio_evaluator.evaluation.plotter_for_multiple_evaluations import PlotterForMultipleEvaluations\n",
+    "from presidio_evaluator.models import  PresidioAnalyzerWrapper\n",
     "\n",
     "import pandas as pd\n",
     "\n",
@@ -90,7 +94,8 @@
     }
    },
    "source": [
-    "dataset_name = \"presidio_data_generator_masked_keys.json\" #\"synth_dataset_v2.json\"\n",
+    "# dataset_name = \"presidio_data_generator_masked_keys.json\" #\"synth_dataset_v2.json\"\n",
+    "dataset_name = \"presidio_data_generator_random_keys.json\"\n",
     "dataset = InputSample.read_dataset_json(Path(Path.cwd().parent, \"data\", dataset_name))\n",
     "print(len(dataset))"
    ],
@@ -369,8 +374,6 @@
     }
    },
    "source": [
-    "from presidio_evaluator.models import  PresidioAnalyzerWrapper\n",
-    "\n",
     "entities_mapping=PresidioAnalyzerWrapper.presidio_entities_map # default mapping\n",
     "\n",
     "print(\"Using this mapping between the dataset and Presidio's entities:\")\n",
@@ -476,11 +479,15 @@
    },
    "cell_type": "code",
    "source": [
-    "from presidio_analyzer import AnalyzerEngine\n",
-    "from presidio_analyzer.nlp_engine import SpacyNlpEngine, NerModelConfiguration\n",
-    "\n",
     "# Define which model to use\n",
     "model_config = [{\"lang_code\": \"en\", \"model_name\": \"en_core_web_lg\"}]\n",
+    "\n",
+    "unnecessary_recognizers = [\n",
+    "    'NhsRecognizer', 'UkNinoRecognizer', 'SgFinRecognizer', 'AuAbnRecognizer',\n",
+    "    'AuAcnRecognizer','AuTfnRecognizer', 'AuMedicareRecognizer', 'InPanRecognizer',\n",
+    "    'InAadhaarRecognizer', 'InVehicleRegistrationRecognizer', 'InPassportRecognizer',\n",
+    "    'InVoterRecognizer'\n",
+    "] + ['UsBankRecognizer', 'UsItinRecognizer', 'MedicalLicenseRecognizer']\n",
     "\n",
     "results_per_threshold = dict.fromkeys([0.3, 0.4, 0.45, 0.5, 0.6, 0.65, 0.7, 0.75, 0.8, 0.85, 0.9])\n",
     "#{0.3:None, 0.4: None, 0.45:None, 0.50:None, 0.6: None, 0.65:None, 0.7: None, 0.75:None, 0.8:None, 0.85: None, 0.9: None}\n",
@@ -490,7 +497,18 @@
     "\n",
     "    # Create the NLP Engine based on this configuration\n",
     "    spacy_nlp_engine = SpacyNlpEngine(models= model_config, ner_model_configuration=ner_model_configuration)\n",
-    "    analyzer_engine = AnalyzerEngine(default_score_threshold=threshold, nlp_engine=spacy_nlp_engine)\n",
+    "    spacy_nlp_engine.load()\n",
+    "\n",
+    "    recognizer_registry = RecognizerRegistry()\n",
+    "    recognizer_registry.load_predefined_recognizers(nlp_engine=spacy_nlp_engine)\n",
+    "    for rec in unnecessary_recognizers:\n",
+    "        recognizer_registry.remove_recognizer(rec)\n",
+    "\n",
+    "    analyzer_engine = AnalyzerEngine(\n",
+    "        default_score_threshold=threshold,\n",
+    "        nlp_engine=spacy_nlp_engine,\n",
+    "        registry=recognizer_registry,\n",
+    "    )\n",
     "    if count == 1:\n",
     "        pprint(f\"Supported entities for English:\")\n",
     "        pprint(analyzer_engine.get_supported_entities(\"en\"), compact=True)\n",
